src/objects/EventApi__Event_Builder_Tab__mdt.object
<CustomObject>
    <description>Tabs for Event Builder.</description>
    <fields>
        <fullName>EventApi__Display_Order__c</fullName>
        <description>Defines the order the tile is to be displayed in the builder.</description>
        <inlineHelpText>Defines the order the tile is to be displayed in the builder.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Icon__c</fullName>
        <description>The value populated in this field defines the image to be displayed for the tab&apos;s icon.</description>
        <inlineHelpText>The value populated in this field defines the image to be displayed for the tab&apos;s icon.</inlineHelpText>
        <label>Icon</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field enables this tab to be viewed in the event builder.</description>
        <inlineHelpText>Checking this field enables this tab to be viewed in the event builder.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Lightning_Component__c</fullName>
        <description>Defines the lightning component to be used for this event builder tab.</description>
        <inlineHelpText>Defines the lightning component to be used for this event builder tab.</inlineHelpText>
        <label>Lightning Component</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Style__c</fullName>
        <description>This defines the type of registration used that will display this tab.</description>
        <inlineHelpText>This defines the type of registration used that will display this tab.</inlineHelpText>
        <label>Registration Style</label>
        <referenceTo>EventApi__Event_Registration_Style__mdt</referenceTo>
        <relationshipLabel>Event Builder Tabs</relationshipLabel>
        <relationshipName>Event_Builder_Tabs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Event Builder Tab</label>
    <pluralLabel>Event Builder Tabs</pluralLabel>
</CustomObject>